// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginContainer > Snapshot > should match snapshot in dark theme 1`] = `
<div
  class="
        rounded-lg border
        bg-gray-800 border-gray-700
        shadow-sm
        
      "
>
  <div>
    Test Content
  </div>
</div>
`;

exports[`PluginContainer > Snapshot > should match snapshot in light theme 1`] = `
<div
  class="
        rounded-lg border
        bg-white border-gray-200
        shadow-sm
        
      "
>
  <div>
    Test Content
  </div>
</div>
`;

exports[`PluginContainer > Snapshot > should match snapshot using PluginContainer alias 1`] = `
<div
  class="
        rounded-lg border
        bg-white border-gray-200
        shadow-sm
        
      "
>
  <div>
    Plugin Content
  </div>
</div>
`;

exports[`PluginContainer > Snapshot > should match snapshot with custom className 1`] = `
<div
  class="
        rounded-lg border
        bg-white border-gray-200
        shadow-sm
        custom-test-class
      "
>
  <div>
    Test Content
  </div>
</div>
`;
